--- a/index.html
+++ b/index.html
@@ -12,7 +12,25 @@
 </head>
 <body>
     <header>
-
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <div><img src="img/logo.png" alt=""></div>    
+                </div>
+                <div class="column">
+                    <nav class="header-nav">
+                        <ul>
+                            <li><a href="#">Planning</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">About us</a></li>
+                        </ul>                
+                        <button type="button" class="btn btn-white">Get started</button>
+                    </nav>
+                    <i class="fa-solid fa-bars"></i>                      
+                </div>
+            </div>
+        </div>
     </header>
     <main></main>
 </body>
