fix: fixed first section, removed lorem

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
             <div class="container">
                 <div class="row">
                     <div class="column column-grow">
-                        <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam tempora quis molestias accusamus aspernatur id eos sapiente doloremque aliquam unde saepe, mollitia cupiditate architecto minus voluptatibus, adipisci voluptatum tempore?</div>
+                        <div class="card"></div>
                     </div>
                     <div class="column">
-                        <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis quae, et sed necessitatibus quasi architecto laudantium? Beatae nisi ullam quo asperiores doloremque ipsam. Quisquam vel non quis omnis, sapiente id.</div>
+                        <div class="card"></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="column">
-                        <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis numquam tempora quis molestias accusamus aspernatur id eos sapiente doloremque aliquam unde saepe, mollitia cupiditate architecto minus voluptatibus, adipisci voluptatum tempore?</div>
+                        <div class="card"></div>
                     </div>
                     <div class="column">
-                        <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis quae, et sed necessitatibus quasi architecto laudantium? Beatae nisi ullam quo asperiores doloremque ipsam. Quisquam vel non quis omnis, sapiente id.</div>
+                        <div class="card"></div>
                     </div>
                     <div class="column">
-                        <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis quae, et sed necessitatibus quasi architecto laudantium? Beatae nisi ullam quo asperiores doloremque ipsam. Quisquam vel non quis omnis, sapiente id.</div>
+                        <div class="card"></div>
                     </div>
                 </div>
             </div>    
