feat: added text and img

--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
             <div class="container">
                 <div class="row">
                     <div class="column column-grow">
-                        <div class="card"></div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="column">
+                                    <h4>Get a demo application</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laudantium voluptatem deleniti. Placeat,</p>
+                                    <button type="button" class="btn btn-blue"><i class="fa-brands fa-apple"></i> App Store</button>                                    
+                                </div>
+                                <div class="column">
+                                    <img src="img/phone.png" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="column">
                         <div class="card"></div>
