feat: added all columns

--- a/index.html
+++ b/index.html
@@ -60,13 +60,25 @@
                 </div>
                 <div class="row">
                     <div class="column">
-                        <div class="card"></div>
+                        <div class="card">
+                            <i class="fa-solid fa-compass-drafting fa-5x"></i> 
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                        </div>
                     </div>
                     <div class="column">
-                        <div class="card"></div>
+                        <div class="card">
+                            <i class="fa-solid fa-laptop-code fa-5x"></i> 
+                            <h4>Development</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                        </div>
                     </div>
                     <div class="column">
-                        <div class="card"></div>
+                        <div class="card">
+                            <i class="fa-solid fa-bullhorn fa-5x"></i>
+                            <h4>Branding</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                        </div>
                     </div>
                 </div>
             </div>    
