--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                 </div>
             </div>    
         </section>
+        <section class="strategy">
+            <div class="container-small">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/planning1.png" alt="">
+                        <h4>Strategic planning</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum corporis obcaecati adipisci id asperiores nihil saepe iste? Sequi expedita excepturi doloribus repellat accusamus architecto maxime nostrum iure. Adipisci, obcaecati odio.</p>
+                    </div>
+                    <div class="column">
+                        <img src="img/planning2.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
         </div>
     </main>
 </body>
