fixed card color

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="column column-grow">
-                        <div class="card">
+                        <div class="card card-blue">
                             <div class="row">
                                 <div class="column">
                                     <h4>Get a demo application</h4>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="column">
-                        <div class="card">
+                        <div class="card card-blue">
                             <i class="fa-solid fa-file-code fa-5x"></i> 
                             <h4>Clean Code</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
@@ -60,21 +60,21 @@
                 </div>
                 <div class="row">
                     <div class="column">
-                        <div class="card">
+                        <div class="card card-blue">
                             <i class="fa-solid fa-compass-drafting fa-5x"></i> 
                             <h4>Web Design</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
                         </div>
                     </div>
                     <div class="column">
-                        <div class="card">
+                        <div class="card card-blue">
                             <i class="fa-solid fa-laptop-code fa-5x"></i> 
                             <h4>Development</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
                         </div>
                     </div>
                     <div class="column">
-                        <div class="card">
+                        <div class="card card-blue">
                             <i class="fa-solid fa-bullhorn fa-5x"></i>
                             <h4>Branding</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
@@ -88,11 +88,13 @@
                 <div class="row">
                     <div class="column">
                         <img src="img/planning1.png" alt="">
-                        <h4>Strategic planning</h4>
+                        <h3>Strategic planning</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum corporis obcaecati adipisci id asperiores nihil saepe iste? Sequi expedita excepturi doloribus repellat accusamus architecto maxime nostrum iure. Adipisci, obcaecati odio.</p>
                     </div>
                     <div class="column">
-                        <img src="img/planning2.png" alt="">
+                        <div class="card card-white">
+                            <img src="img/planning2.png" alt="">        
+                        </div>
                     </div>
                 </div>
             </div>
