--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
                     </div>
                     <div class="column">
                         <div class="card card-white">
-                            <img src="img/planning2.png" alt="">        
+                            <img src="img/planning2.png" alt="">
+                            <h4>App Development</h4>
+                            <p>Develop an on-demand app for your delivery businness to reach your targeted customers without any interruption</p>
+                            <button type="button" class="btn btn-purple">
+                                <i class="fa-solid fa-arrow-down"></i>
+                            </button>        
                         </div>
                     </div>
                 </div>
