--- a/index.html
+++ b/index.html
@@ -104,7 +104,23 @@
                 </div>
             </div>
         </section>
-        </div>
+        <section class="testimonials">
+            <div class="container">
+                <div class="subtitle">
+                    <h4>TESTIMONIALS</h4>
+                    <h2>We are committed expert partners</h2>
+                    <p>we place value on strong relationships and have seen the benefit they bring in our businness. Customers feedback is vital in helping us to get it right.</p>                    
+                </div>
+                <div class="card card-purple">
+                    <div class="column column-img">
+                        <img src="img/testimonial1.jpg" alt="">
+                    </div>
+                    <div class="column column-text">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus, sit quos sequi odio incidunt sed dolores accusantium, minima dolorem reiciendis. Consequuntur rerum obcaecati aliquam facilis quae repudiandae, enim quia!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
