feat: add testimonials section

--- a/index.html
+++ b/index.html
@@ -112,11 +112,36 @@
                     <p>we place value on strong relationships and have seen the benefit they bring in our businness. Customers feedback is vital in helping us to get it right.</p>                    
                 </div>
                 <div class="card card-purple">
-                    <div class="column column-img">
-                        <img src="img/testimonial1.jpg" alt="">
+                    <div class="row">
+                        <div class="column column-img">
+                            <img src="img/testimonial1.jpg" alt="">
+                        </div>
+                        <div class="column column-text">
+                            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus, sit quos sequi odio incidunt sed dolores accusantium, minima dolorem reiciendis. Consequuntur rerum obcaecati aliquam facilis quae repudiandae, enim quia!"</p>
+                            <h4>NAT REYNOLDS</h4>
+                        </div>                        
                     </div>
-                    <div class="column column-text">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus, sit quos sequi odio incidunt sed dolores accusantium, minima dolorem reiciendis. Consequuntur rerum obcaecati aliquam facilis quae repudiandae, enim quia!</p>
+                </div>
+                <div class="card card-purple">
+                    <div class="row">
+                        <div class="column column-img">
+                            <img src="img/testimonial2.jpg" alt="">
+                        </div>
+                        <div class="column column-text">
+                            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus, sit quos sequi odio incidunt sed dolores accusantium, minima dolorem reiciendis. Consequuntur rerum obcaecati aliquam facilis quae repudiandae, enim quia!"</p>
+                            <h4>CELIA ALMEDA</h4>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="card card-purple">
+                    <div class="row">
+                        <div class="column column-img">
+                            <img src="img/testimonial3.jpg" alt="">
+                        </div>
+                        <div class="column column-text">
+                            <p>"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus, sit quos sequi odio incidunt sed dolores accusantium, minima dolorem reiciendis. Consequuntur rerum obcaecati aliquam facilis quae repudiandae, enim quia!"</p>
+                            <h4>BOB ROBERTS</h4>
+                        </div>                        
                     </div>
                 </div>
             </div>
