--- a/index.html
+++ b/index.html
@@ -146,6 +146,35 @@
                 </div>
             </div>
         </section>
+        <section class="benefits">
+            <div class="container">
+                <h2>Benefits of working with us</h2>
+                <div class="row">
+                    <div class="column">
+                        <div class="card card-white">
+                            <h1>01</h1>
+                            <h4>High quality</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card card-white">
+                            <i class="fa-solid fa-laptop-code fa-5x"></i> 
+                            <h4>Development</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card card-white">
+                            <i class="fa-solid fa-bullhorn fa-5x"></i>
+                            <h4>Branding</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
