--- a/index.html
+++ b/index.html
@@ -160,16 +160,42 @@
                     </div>
                     <div class="column">
                         <div class="card card-white">
-                            <i class="fa-solid fa-laptop-code fa-5x"></i> 
-                            <h4>Development</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                            <h1>02</h1>
+                            <h4>Creative team</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
                         </div>
                     </div>
                     <div class="column">
                         <div class="card card-white">
-                            <i class="fa-solid fa-bullhorn fa-5x"></i>
-                            <h4>Branding</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, tenetur ab! Libero, mollitia. Quidem officiis a ab, nemo fugit asperiores exercitationem dolores unde consequuntur hic, voluptatum assumenda dolor velit cum.</p>
+                            <h1>03</h1>
+                            <h4>Amazing results</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card card-white">
+                            <h1>04</h1>
+                            <h4>Best pricing</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card card-white">
+                            <h1>05</h1>
+                            <h4>Innovation</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card card-white">
+                            <h1>06</h1>
+                            <h4>24/7 support</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit numquam harum provident. Distinctio, fugiat ea obcaecati labore, harum et voluptates explicabo velit necessitatibus voluptatem repellendus eius magnam similique eaque quaerat?</p>
+                            <button type="button" class="btn btn-purple">more</button>        
                         </div>
                     </div>
                 </div>
