feat: added about section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,32 @@
                 </div>
             </div>
         </section>
+        <section class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="column column-text">
+                        <h1>About us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolorum nesciunt dolore distinctio commodi explicabo, numquam cumque magni velit deleniti corporis voluptatem ea nulla reiciendis iusto mollitia ipsa quos volupta Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia alias eum totam dolores soluta deleniti laboriosam blanditiis! Alias repellat tenetur rem incidunt suscipit velit, nihil impedit molestias ipsa, provident Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolorum nesciunt dolore distinctio commodi explicabo, numquam cumque magni velit deleniti corporis voluptatem ea nulla reiciendis iusto mollitia ipsa quos voluptas Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat aliquam dicta quas excepturi, accusantium id soluta velit obcaecati reprehenderit harum iste aliquid consectetur repudiandae officia eos inventore autem dolorem? </p>
+                    </div>
+                    <div class="column column-img">
+                        <img src="img/about.jpg" alt="">
+                        <h4>i help companies bla bla bla bla bla bla bla bla bl bla bal</h4>
+                        <button type="button" class="btn btn-purple">
+                            <i class="fa-brands fa-linkedin"></i> Find me on Linkedin
+                        </button> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="start">
+            <div class="container">
+                <h4>GET STARTED</h4>
+                <h2>Simple, transparent pricing</h2>
+                <h1>It's Free!</h1>
+                <p>We're still in beta and will be for some time</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
