feat: add start

--- a/index.html
+++ b/index.html
@@ -220,11 +220,17 @@
             </div>
         </section>
         <section class="start">
-            <div class="container">
+            <div class="container-small">
                 <h4>GET STARTED</h4>
                 <h2>Simple, transparent pricing</h2>
                 <h1>It's Free!</h1>
-                <p>We're still in beta and will be for some time</p>
+                <p>We're still in beta and will be for some time. As we add more functionality, we'll look into other plans with more control.</p>
+                <button type="button" class="btn btn-white">Get started</button>
+                <p>Copyright Boolean 2024
+                    <i class="fa-solid fa-circle"></i> Classe 122
+                    <i class="fa-solid fa-circle"></i>
+                    <a href="#">Privacy policy</a>
+                </p>
             </div>
         </section>
     </main>
