--- a/index.html
+++ b/index.html
@@ -234,5 +234,14 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container-small">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quasi quisquam ea doloribus laboriosam obcaecati, qui esse! Ducimus a impedit quod facilis dolore perferendis ipsam quos, sequi delectus commodi dignissimos!</p>
+            <p>
+                <a href="#">Lorem ipsum</a>dolor sit amet consectetur adipisicing elit.
+                <a href="#">Boolean <br> Careers</a>
+            </p>            
+        </div>
+    </footer>
 </body>
 </html>
